# Alice-Miner

./: .gitignore  Cargo.toml  README.md  README_CN.md  alice_miner.py  alice_miner_v2.py  package-lock.json  package.json  requirements.txt
.github/workflows/: build.yml  release.yml
assets/macos/: AliceMiner.icns
crates/alice-crypto/: Cargo.toml
crates/alice-crypto/src/: lib.rs
crates/alice-crypto/tests/: pop_sr25519_conformance.rs
crates/alice-miner-cli/: Cargo.toml
crates/alice-miner-cli/src/: color.rs  dashboard.rs  doctor.rs  fleet.rs  main.rs  pidfile.rs  setup.rs  tui.rs
crates/alice-miner-cli/tests/: cli.rs
crates/alice-miner-core/: Cargo.toml
crates/alice-miner-core/src/: binaries.rs  dashboard.rs  detect.rs  endpoint.rs  engine.rs  identity.rs  keyring.rs  lib.rs  pop.rs  prl_payout.rs  service.rs  supervise.rs  terminal.rs
crates/alice-miner-core/src/detect/: capability.rs  mod.rs
crates/alice-miner-core/src/lane/: gpu_alpha.rs  gpu_prl.rs  gpu_rvn.rs  mod.rs  xmr.rs
crates/alice-miner-core/src/stats/: mod.rs  parse_alpha.rs  parse_kawpow.rs  parse_srbminer.rs
crates/alice-miner-gui/: Cargo.toml
crates/alice-miner-gui/src/: app.rs  main.rs  shot.rs  update.rs
crates/alice-miner-gui/src/ui/: bg_unlock.rs  change_addr.rs  chrome.rs  dashboard.rs  hero.rs  home.rs  icons.rs  mod.rs  onboarding.rs  prl_unlock.rs  strings.rs  theme.rs  widgets.rs
crates/alice-release/: Cargo.toml
crates/alice-release/src/: lib.rs
crates/alice-supervise/: Cargo.toml
crates/alice-supervise/src/: child.rs  lib.rs
docs/: PLAN.md
docs/audit/: anticheat-audit.md  deep-security-audit.md
docs/design/: 01-architecture.md  02-device-lane.md  03-embedded-wallet.md  04-miners-failover.md  05-ai-earn.md  06-ui-ux.md  07-dashboard.md  08-packaging.md  mockup-A.html  mockup-B.html
release-assets/: miners.json
release-notes/: v0.3.2.md
scripts/: adhoc_sign_macos.sh  build_macos_icon.sh  release.sh  stage_gpu_prl.sh
src/: App.tsx  compression.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: gpu.rs  mining.rs  mod.rs
src-tauri/src/services/: updater.rs
src/components/: Sidebar.tsx
src/hooks/: useAppStore.ts
src/pages/: Hardware.tsx  Settings.tsx  Setup.tsx
