[package]
name = "alice-miner-cli"
version = "0.3.4"
edition = "2021"

# Headless Alice Miner client (PLAN §2.2, C2). Drives the SAME `alice-miner-core`
# engine as the GUI, with NO egui/eframe anywhere in its dependency tree. M0
# ships a placeholder subcommand stub; full CLI parity (detect / identity /
# start / status / stop) is M6.

[[bin]]
name = "alice-miner-cli"
path = "src/main.rs"

[dependencies]
alice-miner-core = { path = "../alice-miner-core" }
clap = { version = "4.5", features = ["derive"] }
# Ctrl-C → graceful Stop. The `termination` feature ALSO traps SIGTERM/SIGHUP so a
# `stop` subcommand (which SIGTERMs the recorded `start` pid) drives the SAME
# graceful Command::Stop path as Ctrl-C. No egui/eframe anywhere in this tree
# (PLAN §2.2/C2; verified by `cargo tree` + a no-egui unit test).
ctrlc = { version = "3.4", features = ["termination"] }
rpassword = "7.3"
# `--json` machine-readable output (detect/start). serde_json is already in the
# engine's tree (a core dep), so this pulls in NO new transitive crates.
serde_json = "1.0"
# In-place live dashboard for an INTERACTIVE TTY (the `start` loop). A non-TTY
# (piped / CI) and `--json` keep the plain line renderer untouched — the TUI is a
# render-layer swap only. `crossterm` is ratatui's default backend; we use
# ratatui's re-export (`ratatui::crossterm`) so the versions can never drift.
ratatui = "0.30"
crossterm = "0.29"

[dev-dependencies]
# Drive the built CLI binary end-to-end in integration tests (subcommand parsing,
# --help, the no-egui surface, identity round-trip). `CARGO_BIN_EXE_*` is provided
# by cargo to the test harness.
assert_cmd = "2.0"
predicates = "3.1"
