[package]
name = "alice-miner-core"
version = "0.4.0"
edition = "2021"

# The UI-agnostic mining engine library (detect / lane-select / supervise /
# stats / identity / endpoint / config). M0 ships only a placeholder so the
# crate graph and the shared-crate path dependencies are wired and compiling;
# the real engine lands in M1+.

[dependencies]
alice-crypto = { path = "../alice-crypto" }
alice-supervise = { path = "../alice-supervise" }
alice-release = { path = "../alice-release" }

# Engine deps. Versions match the Wallet's `gui/Cargo.toml` so the ported logic
# (blake2/bs58/hex address validation, the tokio runtime+child supervision,
# serde snapshots) compiles byte-identically.
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
blake2 = "0.10.6"
bs58 = "0.5.1"
hex = "0.4.3"
base64 = "0.22.1"
zeroize = { version = "1.8.2", features = ["derive"] }
# HTTPS control-plane client for the GPU-PRL PoP handshake (M4 challenge/verify/
# enroll). Pinned to the SAME ureq config as `alice-release` so the TLS/gzip
# feature set and transitive deps stay byte-identical across the workspace.
ureq = { version = "2.10", default-features = false, features = ["tls", "gzip"] }

# Engine auto-download extraction (binaries.rs `ensure_cached_engine`): a missing
# engine is fetched + SHA-pin-verified into the per-user cache dir. SRBMiner ships
# a `.tar.gz` (Linux) / `.zip` (Windows); xmrig is a direct binary. `zip` is
# deflate-only + path-traversal-guarded by our extractor. The fetched bytes are
# ALWAYS verified against the embedded pin before install (the URL is just a CDN).
tar = "0.4.40"
flate2 = "1.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# OS-native secret store for the background-mining unlock password (B4). The launchd/
# systemd/Task-Scheduler unit carries NO secret; the wallet unlock password lives in the
# OS keyring (macOS Keychain / Windows Credential Manager / Linux Secret Service) and is
# read by the `--from-service` start so a GPU (pearlhash) lane can persist headless. The
# keystore stays encrypted on disk — only the password is stored, protected by the OS
# account. Native backends per platform; a headless Linux box without a running Secret
# Service probes as unavailable so GPU background is refused honestly (no plaintext path).
# BUILD PREREQ (Linux from source): `sync-secret-service` pulls in `libdbus-sys`, so a clean
# Debian/Ubuntu box must `apt-get install -y libdbus-1-dev pkg-config` (+ a C toolchain) or
# `cargo build` fails resolving dbus. The CI images + the packaged release already include
# it; this only bites a from-source build on a bare box (e.g. a fresh rented GPU instance).
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }
