[package]
name = "alice-miner-gui"
version = "0.1.0"
edition = "2021"

# The Alice Miner desktop app (the product): an eframe/egui binary on the SAME
# stack the Wallet ships (PLAN §2.1, D-stack). M0 opens a trivial empty window
# to validate the egui stack decision and the eframe feature set; the real Home
# / Dashboard / onboarding screens land from M2 onward.

[[bin]]
name = "alice-miner-gui"
path = "src/main.rs"

[dependencies]
alice-miner-core = { path = "../alice-miner-core" }
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
